--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^6.0.0-0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-text-mask": "^5.5.0",
     "react-toastify": "^9.0.3",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.27"
