--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.14.7",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
+    "moment": "^2.29.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
