--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/lab": "^5.0.0-alpha.142",
     "@mui/material": "^5.14.7",
+    "@mui/x-date-pickers": "^6.15.0",
     "axios": "^0.27.2",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.3",
     "moment": "^2.29.4",
     "react": "^18.1.0",
